# ARIA

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/skills/verify/: SKILL.md
docker/: python-service.Dockerfile
docker/ollama/: entry.sh
docs/: architecture.md  data-model.md  qol-backlog.md  roadmap.md  scaling-debt.md
docs/plans/: fuzzy-entity-matching.md  m10-web-grounded-chat.md  m11-pwa-offline-log-sync.md  m2-document-ingestion-hub.md  m3-basic-ai-chat.md  m5-document-citations.md  m6-streaming-responses.md  m7-multi-agent-orchestration.md  m8-mcp-integration.md  m9-multi-household-accounts.md  ok-let-s-take-a-starry-cat.md
libs/auth/: pyproject.toml
libs/auth/src/aria_auth/: __init__.py  passwords.py  permissions.py  session.py  sharing.py
libs/auth/tests/: test_passwords.py  test_permissions.py  test_session.py  test_sharing.py
libs/shared/: pyproject.toml
libs/shared/src/aria_shared/: chroma.py  middleware.py  s3.py  types.py
libs/shared/src/aria_shared/models/: __init__.py  documents.py  entities.py  household.py  logs.py  schedules.py
libs/shared/src/aria_shared/models/entities/: __init__.py  base.py  equipment.py  export_ts.py  home.py  person.py  project.py  vehicle.py
libs/shared/src/aria_shared/schemas/: __init__.py  logs.py  schedules.py
libs/shared/tests/: test_export_ts.py
scripts/: aria-mcp-login.sh
services/ai-service/: pyproject.toml
services/ai-service/app/: chroma.py  citations.py  config.py  core_api_client.py  entity_grounding.py  lazy_singleton.py  main.py  mcp_server.py  mcp_tools.py  ollama.py  retrieval.py
services/ai-service/app/adapters/: __init__.py  base.py  qwen.py
services/ai-service/app/agents/: __init__.py  graph.py  nodes.py  state.py
services/ai-service/app/providers/: __init__.py  search.py  weather.py
services/ai-service/app/routers/: chat.py  health.py
services/ai-service/app/schemas/: chat.py
services/ai-service/tests/: test_adapters.py  test_agents.py  test_chat.py  test_citations.py  test_core_api_client.py  test_entity_grounding.py  test_mcp_server.py  test_mcp_tools.py  test_ollama.py  test_providers.py  test_retrieval.py
services/core-api/: pyproject.toml
services/core-api/app/: celery_client.py  config.py  db.py  dependencies.py  ids.py  indexes.py  main.py  s3.py  seed.py  session.py
services/core-api/app/logic/: schedules.py
services/core-api/app/routers/: auth.py  documents.py  entities.py  health.py  households.py  logs.py  schedules.py  users.py
services/core-api/app/schemas/: documents.py  entities.py  logs.py  schedules.py
services/core-api/tests/: conftest.py  test_auth.py  test_auth_signup.py  test_documents_crud.py  test_entities_archive.py  test_entities_delete.py  test_entities_search.py  test_entities_tags.py  test_indexes.py  test_invites.py  test_logs_crud.py  test_logs_recompute_integration.py  test_permissions.py  test_permissions_delete.py  test_plans_monthly_schedule.py  test_plans_once_schedule.py  test_schedule_recompute.py  test_schedules_crud.py  test_sharing.py  test_sharing_pre_migration.py  test_users.py
services/frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
services/frontend/src/: App.tsx  index.css  main.tsx  sw.ts
services/frontend/src/api/: auth.ts  chat.ts  client.ts  documents.ts  entities.ts  households.ts  logs.ts  schedules.ts  types.ts  users.ts
services/frontend/src/components/: ChatBubble.tsx  DocumentList.tsx  DocumentUploadForm.tsx  EntityForm.tsx  HouseholdLocationCard.tsx  HouseholdMembersCard.tsx  Layout.tsx  LogForm.tsx  OfflineBanner.tsx  PendingLogList.tsx  PlanForm.tsx  ScheduleForm.tsx  SearchBar.tsx  SharingControl.tsx  StatusBadge.tsx  TagFilterModal.tsx
services/frontend/src/context/: ThemeContext.tsx
services/frontend/src/domains/: base.ts  equipment.ts  generated.ts  home.ts  index.ts  person.ts  project.ts  vehicle.ts
services/frontend/src/hooks/: useDeleteDocument.ts  useEntities.ts  useEntityDocuments.ts  useHousehold.ts  useLogSyncListener.ts  useLogs.ts  useOnlineStatus.ts  usePendingLogs.ts  useSchedules.ts  useSendChatMessage.ts  useSession.ts  useStreamChatMessage.ts  useUploadDocument.ts  useUser.ts
services/frontend/src/lib/: pendingLogs.ts  recurrence.ts
services/frontend/src/pages/: AcceptInvitePage.tsx  ChatPage.tsx  DueSoonPage.tsx  EntityDetailPage.tsx  EntityListPage.tsx  HealthPage.tsx  LoginPage.tsx  ProfilePage.tsx  SignupPage.tsx
services/worker/: pyproject.toml
services/worker/app/: backfill_household_id.py  celery_app.py  chroma.py  config.py  db.py  ollama.py  s3.py
services/worker/app/logic/: chunking.py  ocr.py
services/worker/app/tasks/: __init__.py  delete_document.py  ping.py  process_document.py
services/worker/tests/: test_backfill_household_id.py  test_chunking.py
