[project]
name = "aria-auth"
version = "0.1.0"
description = "Shared session/role auth primitives for ARIA services — session validation and permission checks as one importable FastAPI dependency seam, not duplicated per service (see docs/scaling-debt.md #5)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "motor>=3.6",
    "aria-shared",
]

[tool.uv.sources]
aria-shared = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "mongomock-motor>=0.0.34"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aria_auth"]
