[project]
name = "aria-shared"
version = "0.1.0"
description = "Shared Pydantic domain models for ARIA services (see docs/data-model.md)"
requires-python = ">=3.12"
dependencies = [
    "pydantic[email]>=2.7",
    "fastapi>=0.115",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aria_shared"]
