[project]
name = "aria-shared"
version = "0.1.0"
description = "Shared Pydantic domain models for ARIA services (see docs/data-model.md)"
requires-python = ">=3.12"
dependencies = [
    "pydantic[email]>=2.7",
    "fastapi>=0.115",
    "boto3>=1.35",
]

[dependency-groups]
dev = ["pytest>=8.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aria_shared"]
