[project]
name = "ai-service"
version = "0.1.0"
description = "ARIA ai-service — RAG chat, LangGraph agents. Depends on Chroma + a local Ollama model; core-api works fine without this."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "chromadb>=0.5",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
    "aria-shared",
]

[tool.uv.sources]
aria-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
