[project]
name = "ai-service"
version = "0.1.0"
description = "ARIA ai-service — RAG chat, LangGraph agents. Depends on Chroma + a local Ollama model; core-api works fine without this."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "chromadb>=0.5",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
    "aria-shared",
    "aria-auth",
    "langgraph>=0.2",
    "langgraph-checkpoint-redis>=0.1",
]

[tool.uv.sources]
aria-shared = { workspace = true }
aria-auth = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
