[project]
name = "core-api"
version = "0.1.0"
description = "ARIA core-api — CRUD for entities/logs/schedules/documents. Mongo only, no AI dependency."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "motor>=3.6",
    "pydantic-settings>=2.6",
    "aria-shared",
]

[tool.uv.sources]
aria-shared = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mongomock-motor>=0.0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
