[project]
name = "worker"
version = "0.1.0"
description = "ARIA worker — async OCR/chunk/embed pipeline for documents (Celery)."
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "pydantic-settings>=2.6",
    "aria-shared",
    "watchdog>=4.0",
]

[tool.uv.sources]
aria-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
