[project]
name = "worker"
version = "0.1.0"
description = "ARIA worker — async OCR/chunk/embed pipeline for documents (Celery)."
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "pydantic-settings>=2.6",
    "aria-shared",
    "watchdog>=4.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17",
    "pillow>=11.0",
    "httpx>=0.27",
    "chromadb>=0.5",
    "pymongo>=4.9",
    "boto3>=1.35",
]

[tool.uv.sources]
aria-shared = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
